[tool.poetry]
name = "pyslink"
version = "0.4.0"
description = "Soft link a file/directory with python site-packages directory"
authors = ["Quantmind <message@quantmind.com>"]
license = "BSD-3-Clause"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.280"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyslink = "pyslink:main"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F"]
line-length = 88

[tool.mypy]
disallow_untyped_calls = true
warn_return_any = false
disallow_untyped_defs = true
warn_no_return = true
